==============================

*Release date: XX-XXX-200X*

Extension modules
-----------------

- Apply fix for potential heap overflow in PCRE code (CAN-2005-2491).


What's New in Python 2.3.5?
==============================

*Release date: 08-FEB-2005*

Core and builtins
-----------------

- Partially revert the fix for #1074011; don't try to fflush stdin anymore.

Library
-------

- Applied a security fix to SimpleXMLRPCserver (PSF-2005-001).  This
  disables recursive traversal through instance attributes, which can
  be exploited in various ways.

- Bug #1114776. Applied a fix to the copy.py fix in 2.3.5rc1 to deal 
  with types that don't have an __mro__.


What's New in Python 2.3.5rc1?
==============================

*Release date: 26-JAN-2005*

Core and builtins
-----------------

- Bug #1074011: closing sys.std{in,out,err} now causes a flush() and 
  an ferror() call.

- Bug #1055820 Cyclic garbage collection was not protecting against that
  calling a live weakref to a piece of cyclic trash could resurrect an
  insane mutation of the trash if any Python code ran during gc (via
  running a dead object's __del__ method, running another callback on a
  weakref to a dead object, or via any Python code run in any other thread
  that managed to obtain the GIL while a __del__ or callback was running
  in the thread doing gc).  The most likely symptom was "impossible"
  ``AttributeEror`` exceptions, appearing seemingly at random, on weakly
  referenced objects.  The cure was to clear all weakrefs to unreachable
  objects before allowing any callbacks to run.

- Bug #951851: Python crashed when reading import table of certain
  Windows DLLs

- Bug #966623. classes created with type() in an exec(, {}) don't
  have a __module__, but code in typeobject assumed it would always
  be there.

- Bug #952807:  Unpickling pickled instances of subclasses of
  datetime.date, datetime.datetime and datetime.time could yield insane
  objects.  Thanks to Jiwon Seo for a fix.
