@@ -3,7 +3,7 @@
 
 """A package for parsing, handling, and generating email messages."""
 
-__version__ = '2.5.7'
+__version__ = '2.5.8'
 
 __all__ = [
     'base64MIME',
